--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -589,6 +589,7 @@ display:flex;
 	text-decoration:none;
 	opacity:0.9;
 	position:relative;
+	font-size: .9rem;
 }
 .sidebar .nav-link .icon{
 	height: 1.5rem;
@@ -1239,15 +1240,33 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 	transform: translate(-50%,-50%);
 }
 @media(min-width:1600px){
+	.theme-entry .grid-header-wrapper, .theme-entry .panel-header, .theme-entry .panel-header-c, .theme-entry .panel-header-wrapper {
+    height: 3vw;
+    line-height: 3vw;
+    min-height: 3vw;
+}
+	html:not(.designer) [name*="OBB_Collapse"] .panel-header{
+	height: 5vw;
+}
+	html:not(.designer) [name*="OBB_Collapse"] .panel-header .panel-header-c .panel-header-wrapper .panel-header-text, 
+	html:not(.designer) [name*="OBB_Collapse"] .grid-header .grid-header-wrapper .grid-header-text {
+    font-size: 1.6vw;
+}
+	.sidebar .topic{
+		font-size:.9vw;
+	}
+	.sidebar .nav-link{
+		font-size:1vw;
+	}
 	html:not(.designer) [name*="OBB_Collapse"] .panel-header .panel-header-c .panel-header-wrapper,
 html:not(.designer) [name*="OBB_Collapse"] .grid-header  .grid-header-wrapper{
 	padding:1vw 2vw;
 	width: calc(100% - 4vw);
 }
-	html:not(.designer) [name*="OBB_Collapse"] .panel-header .panel-header-c .panel-header-wrapper .panel-header-text > span,
+html:not(.designer) [name*="OBB_Collapse"] .panel-header .panel-header-c .panel-header-wrapper .panel-header-text > span,
 html:not(.designer) [name*="OBB_Collapse"] .grid-header  .grid-header-wrapper .grid-header-text> span{
-	min-height: 3vw;
-	font-size: 1.3vw;
+	/* min-height: 3vw; */
+	/* font-size: 1.3vw; */
 }
 html:not(.designer) [name*="OBB_Collapse"] .panel-body{
 	padding: 1vw 2vw;
