--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1243,6 +1243,9 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 	transform: translate(-50%,-50%);
 }
 @media(min-width:1600px){
+	.theme-entry .grid .grid-content-cell{
+		min-height:5vw!important;
+	}
 	html:not(.designer) [name*="OBB_button OBB_primary_button"],
 html:not(.designer) .SourceCode-Forms-Controls-Web-Button{
 	font-size:1vw;
