--- a/Styles/Vendor Registration/Style.css
+++ b/Styles/Vendor Registration/Style.css
@@ -16,6 +16,10 @@
 	font-size:1rem;
 }
 @media(min-width:1600px){
+	[name*="AttachmentListsNonSMEData"] ul li{
+	
+	font-size:1vw;
+}
  [name="HeaderTitleContainer"] [name="HeaderTitle"]{
 	 font-size:2vw;
  }
