--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1175,7 +1175,9 @@ html:not(.designer) [name*="UserName"]{
 	position:relative;
 }
 html:not(.designer) [name*="Cancel Button"],
-html:not(.designer) [name*="Cancel Button"]:hover{
+html:not(.designer) [name*="Cancel Button"]:hover,
+html:not(.designer) [name*="button Cancel"],
+html:not(.designer) [name*="button Cancel"]:hover{
 	color: var(--orange)!important;
 	border:1px solid var(--borderColor)!important;
 	background-color: transparent!important;
