--- a/Styles/Registration/Style.css
+++ b/Styles/Registration/Style.css
@@ -92,6 +92,10 @@ html:not(.designer) .theme-entry .form{
     margin-top:1rem;
 }
 @media(min-width:1600px){
+
+    	html:not(.designer) body{
+    margin-top: 0vw!important;
+}
     	html.no-border-box-support body.theme-entry{
 	margin:0!important;
 	margin-top: 0!important;
