--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -5,7 +5,7 @@
     --orange:#E57431;
 	--orange-hover: #a6501d;
     --description:#3E3E3E;
-    --borderColor:#E3E3E3;
+    --borderColor:#9f9f9f;
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
