--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1309,7 +1309,33 @@ i#togglePassword1::before{
 	content:""!important;
 }
 td#\36 65bba9b-94a4-179b-4bb6-7db4dd45000e {display: table-cell!important;}
+.theme-entry .input-control.select-box .input-control-buttons a>span span{
+	background-image:url("https://frontenduiux.github.io/OBB_ETenders/Images/Chevron.svg")!important;
+	background-size:contain;
+	background-position:center;
+	background-repeat:no-repeat;
+	height:2rem;
+	width:2rem;
+	top: 50%;
+	transform:translateY(-50%);
+	position:absolute;
+}
+a.dropdown{
+	height: 100%!important;
+	width: 3rem!important;
+	position:relative;
+}
+a.dropdown > span{
+	position:relative;
+}
 @media(min-width:1600px){
+	a.dropdown{
+	width: 3vw!important;
+}
+.theme-entry .input-control.select-box .input-control-buttons a>span span{
+	height:2vw;
+	width:2vw;
+}
 	i#togglePassword,
 i#togglePassword1{
     height: 1.7vw;
