--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -863,6 +863,7 @@ height:fit-content!important;
 html:not(.designer) .theme-entry .popup-header{
     padding:1rem 2rem;
     background-color:#f7f7f7;
+	left: 0;
     margin: 0!important;
     position: relative!important;
     height: fit-content!important;
