--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1325,14 +1325,14 @@ i#togglePassword1::before{
 td#\36 65bba9b-94a4-179b-4bb6-7db4dd45000e {display: table-cell!important;}
 .theme-entry .input-control.select-box .input-control-buttons a>span span{
 	/* background-image:url("https://frontenduiux.github.io/OBB_ETenders/Images/Chevron.svg")!important; */
-	background-size:contain;
-	background-position:center;
-	background-repeat:no-repeat;
-	height: 1rem;
-	width: 1rem;
-	top: 50%;
-	transform:translateY(-50%);
-	position:absolute;
+	/* background-size:contain; */
+	/* background-position:center; */
+	/* background-repeat:no-repeat; */
+	/* height: 1rem; */
+	/* width: 1rem; */
+	/* top: 50%; */
+	/* transform:translateY(-50%); */
+	/* position:absolute; */
 }
 a.dropdown{
 	height: 100%!important;
@@ -1575,8 +1575,8 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button{
 	width: 3vw!important;
 }
 .theme-entry .input-control.select-box .input-control-buttons a>span span{
-	height: 1vw;
-	width: 1vw;
+	/* height: 1vw; */
+	/* width: 1vw; */
 }
 	i#togglePassword,
 i#togglePassword1{
