--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1248,9 +1248,9 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 .popupManager[style*="position: absolute;"]{
 	height: 100vh!important;
 	width: 100vw!important;
-	position: fixed!important;
-	top: 0!important;
-	left: 0!important;
+	/* position: fixed!important; */
+	/* top: 0!important;
+	left: 0!important; */
 	z-index: 2;
 }
 .popup.dialog{
